refactor: 消除魔法值并添加日志配置
- 创建 AuditAction 枚举替代审计日志中的魔法字符串
- 创建 ActivityType 枚举替代用户活动类型魔法字符串
- 统一审核状态：Comment.auditStatus 改用 CommentStatus 枚举
- 创建 CacheNames 常量类集中管理缓存名称
- TTL 外部化：Redis 缓存过期时间移入 BlogProperties 配置
- 实现 NoOpFileRecorder 消除 x-file-storage 警告
- 添加 logback-spring.xml 配置文件支持日志输出到文件